--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^6.1.1",
     "random": "^5.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
